# learnings

azure_data-scientist/: books.csv  copilot-pick_a_song.py  copilot_playaround.py  flights_data_exploration_challenge.ipynb  playaround_visualise_data.py  pyproject.toml
